--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MyPortfolio</title>
+    <title>Abhishek Gupta</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -14,7 +14,5 @@
 <body>
     <app-root></app-root>
 </body>
-
-</html>
 
 </html>
